correct issue where text are in contact page spilled out of main section

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,14 +24,27 @@ header {
 	background-image: url("../images/wood.jpg");
 	position: fixed;
 	width: 100%;
-	padding: 5px;
+	height: 35px;
+	padding: 0px;
 	top: 0px;
+	left: 0px;
 	text-align: center;
+	margin: 0px;
+}
+
+nav {
+	vertical-align: middle;
+	width: 100%;
+	height: 35px;
 }
 
 body {
 	background-image: url("../images/wood.jpg");
 	font-family: arial;
+}
+
+textarea {
+	max-width: 100%;
 }
 
 #top p {
@@ -40,13 +53,27 @@ body {
 	border: double;
 	border-color: white;
 	padding: 2px;
-	margin-top: auto;
-	margin-bottom: auto;
 	margin-left: 3px;
 	margin-right: 3px;
-	height: 6%;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 #top a {
 	color: white;
 	text-decoration: none;
+}
+
+h1 {
+	text-align: center;
+	width: 90%;
+	background-color: blue;
+	color: white;
+	margin-right: auto;
+	margin-left: auto;
+	border: double 5px;
+	border-color: white;
+	font-family: georgia;
+}
+a:visited {
+	color: gray;
 }
